fix: remove readme, fix show all logs button visibiltiy

--- a/tools/media-library-backfill/media-library-backfill.css
+++ b/tools/media-library-backfill/media-library-backfill.css
@@ -100,6 +100,10 @@
   white-space: nowrap;
 }
 
+.media-library-backfill #show-all-logs[hidden] {
+  display: none;
+}
+
 .media-library-backfill #console-output {
   max-height: 400px;
   overflow-y: auto;
